fix styles(details comp): type alignment

--- a/src/app/features/credential-details/credential-details.component.scss
+++ b/src/app/features/credential-details/credential-details.component.scss
@@ -96,13 +96,6 @@ mat-card-content.basic-actions-card-content{
 
 .credential-type{
   font-size: 1.1rem;
-  max-width: 450px;
-  align-items: center;
-  padding-inline: 16px;
-}
-
-.credential-type{
-  font-size: 1.1rem;
 }
 
 .basic-info span:nth-child(2),
